feat: Add config flag for topic wildcard and tweak portal UI
