# docs/apis/openapi.yaml
@@ -2949,6 +2949,8 @@ components:
           type: string
         TOPICS:
           type: string
+        TOPICS_ALLOW_WILDCARDS:
+          type: string
       additionalProperties: false
       example:
         TOPICS: "user.created,user.updated"
@@ -3114,6 +3116,7 @@ paths:
                 $ref: "#/components/schemas/ManagedConfig"
               example:
                 TOPICS: "user.created,user.updated"
+                TOPICS_ALLOW_WILDCARDS: "false"
                 DESTINATIONS_WEBHOOK_MODE: "default"
         "401":
           $ref: "#/components/responses/Unauthorized"
@@ -3138,6 +3141,7 @@ paths:
               $ref: "#/components/schemas/ManagedConfig"
             example:
               TOPICS: "user.created,user.updated"
+              TOPICS_ALLOW_WILDCARDS: "false"
               DESTINATIONS_WEBHOOK_MODE: "default"
       responses:
         "200":
@@ -3148,6 +3152,7 @@ paths:
                 $ref: "#/components/schemas/ManagedConfig"
               example:
                 TOPICS: "user.created,user.updated"
+                TOPICS_ALLOW_WILDCARDS: "false"
                 DESTINATIONS_WEBHOOK_MODE: "default"
         "400":
           $ref: "#/components/responses/BadRequest"
